--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   carousel_slider: ^4.0.0
   marquee: ^2.2.2
+  flutter_native_splash: ^2.2.2
+
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
